; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_archive.c_fz_open_archive_with_stream.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_archive.c_fz_open_archive_with_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FZ_ERROR_GENERIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"cannot recognize archive\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @fz_open_archive_with_stream(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @fz_is_zip_archive(i32* %6, i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @fz_open_zip_archive_with_stream(i32* %11, i32* %12)
  store i32* %13, i32** %5, align 8
  br label %28

14:                                               ; preds = %2
  %15 = load i32*, i32** %3, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @fz_is_tar_archive(i32* %15, i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i32*, i32** %3, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = call i32* @fz_open_tar_archive_with_stream(i32* %20, i32* %21)
  store i32* %22, i32** %5, align 8
  br label %27

23:                                               ; preds = %14
  %24 = load i32*, i32** %3, align 8
  %25 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %26 = call i32 @fz_throw(i32* %24, i32 %25, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %27

27:                                               ; preds = %23, %19
  br label %28

28:                                               ; preds = %27, %10
  %29 = load i32*, i32** %5, align 8
  ret i32* %29
}

declare dso_local i64 @fz_is_zip_archive(i32*, i32*) #1

declare dso_local i32* @fz_open_zip_archive_with_stream(i32*, i32*) #1

declare dso_local i64 @fz_is_tar_archive(i32*, i32*) #1

declare dso_local i32* @fz_open_tar_archive_with_stream(i32*, i32*) #1

declare dso_local i32 @fz_throw(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
